--- a/.env.example
+++ b/.env.example
@@ -3,3 +3,11 @@ DB_PORT=3306
 DB_USER=root
 DB_PASSWORD=admin123
 DB_NAME=smart_eye
+
+AWS_ACCESS_KEY_ID=AWS_ACCESS_KEY_ID
+AWS_SECRET_ACCESS_KEY=AWS_SECRET_ACCESS_KEY
+
+STORAGE_BUCKET_NAME=bucket_name
+STORAGE_URL=http://localhost:8081/
+
+GOOGLE_SERVICE_ACCOUNT_PATH=/your/path
