Load firebase credentials from environment variables and some fixes

--- a/.env.example
+++ b/.env.example
@@ -11,3 +11,4 @@ STORAGE_BUCKET_NAME=bucket_name
 STORAGE_URL=http://localhost:8081/
 
 GOOGLE_SERVICE_ACCOUNT_PATH=/your/path
+GOOGLE_SERVICE_ACCOUNT_CRED=cred
